# qa_guru_python_16homework

./: pyproject.toml
